@@ -18,7 +18,7 @@
 
 VERSION      := 3
 SUBVERSION   := 2
-MINORVERSION := 7
+MINORVERSION := 8
 TARVERSION   := $(VERSION).$(SUBVERSION).$(MINORVERSION)
 
 ############ vars
