@@ -1,5 +1,6 @@
 procps-3.2.8 --> procps-3.2.9
 
+per-process swap info available on Linux 2.6.34
 top: fix an aliasing problem -- thanks David Owen
 
 procps-3.2.7 --> procps-3.2.8
